<resources>
    <string name="app_name">SHUTA</string>
    <string name="hint_name">Full name</string>
    <string name="hint_email">emailAddress</string>
    <string name="hint_id">id no</string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="text_login">login</string>
    <string name="text_sign_up">sign up</string>
    <string name="text_view">welcome admin</string>
    <string name="hint_Fname">firstname</string>
    <string name="hint_Lname">lastname</string>
    <string name="hint_marks">Marks</string>
    <string name="text_profile">profile</string>
    <string name="text_logout">logout</string>
    <string name="text_home">Home</string>
    <string name="text_wellcomea">what do you want?</string>
    <string name="text_uploads">Uploads results</string>
    <string name="text_upload">Post announcement</string>
    <string name="text_share">write notification</string>
    <string name="text_now">login now</string>
    <string name="text_test">Enter the announcement in the field below</string>
    <string name="text_post">post</string>
    <string name="text_copy">SHUTA is a platform which simplifies the academic issue for teacher and students where a teacher uploads various annoucement as well as course results and students can view the uploadsin the application but only when the student is registered already and not otherwis</string>
    <string name="text_best">THE BEST AND EXCELLENT ANDROID APPLICATION</string>
    <string name="hint_announce">Enter the announcement</string>
    <string name="text_forgrt">Enter your email in the field below</string>
    <string name="hint_passemail">Enter email</string>
    <string name="text_btngetpass">next</string>
    <string name="hint_regno">Reg no..</string>
    <string name="hint_fullnam">full name..</string>
    <string name="text_create">Create accoount?</string>
    <string name="hint_is2">IS237:</string>
    <string name="hint_is3">IS238:</string>
    <string name="hint_is4">CS273:</string>
    <string name="hint_total">Total marks:</string>
    <string name="text_get">welcome again this is shuta!!</string>
    <string name="text_result">SEE RESULTS</string>
    <string name="text_setting">settings</string>
    <string name="text_student">Student homepage</string>
    <string name="text_notify">check for notification</string>
    <string name="text_view1">view </string>
    <string name="text_results">view results</string>
    <string name="text_updaten">class announcement</string>
    <string name="text_exit">exit page</string>
    <string name="text_succes">Conglatulation! You have registered succesfully</string>
    <string name="text_view2">Enter Reg no;</string>
    <string name="text_semister">Here you have to enter your Reg no to view your Results</string>
    <string name="text_update">update</string>
    <string name="hint_s">S/NO:</string>
    <string name="text_delete">delete</string>
    <string name="text_ad">Teacher/Admin</string>
    <string name="text_st">student</string>
    <string name="text_l">Login as..</string>
    <string name="text_adm">Admin Login</string>
    <string name="text_add">add data</string>
    <string name="text_viewAll">view All</string>
    <string name="text_learn">learn more</string>
    <string name="text_member">remember me ?</string>
    <string name="text_forget">forgot password ?</string>
    <string name="text_sign">sign up now !</string>
    <string name="text_text_view">This is SHUTA meaning Shule Tanzania .Login or sign up to join the platform hope u will enjoy!!</string>
    <string name="error_message_name">Enter full name</string>
    <string name="error_message_email">Enter valid email</string>
    <string name="error_message_username">Enter username</string>
    <string name="error_message_password">Enter password</string>
    <string name="success_message">Registration successfully "click login"</string>
    <string name="text_not_member"></string>
</resources>
