<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".announcement">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/announce"
        android:text="@string/text_test"
        android:textSize="30sp"
        android:textColor="@color/yellow"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enter"
        android:layout_marginTop="30sp"
        android:hint="@string/hint_announce"
        android:textColorHint="@color/colorPrimary"
        android:backgroundTint="@color/yellow"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="60sp"
        android:id="@+id/posta"
        android:layout_marginTop="40sp"
        android:background="@drawable/buttonshape"
        android:text="@string/text_post"
        android:textColor="#fff"
        android:layout_gravity="center"
        />

    <Button
        android:layout_width="180sp"
        android:layout_height="60sp"
        android:id="@+id/exitp"
        android:text="@string/text_exit"
        android:background="@drawable/buttonshape"
        android:layout_marginTop="20sp"
        android:textColor="@color/yellow"
        android:layout_gravity="center"
        />

</LinearLayout>
</ScrollView>