<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgotpassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:orientation="vertical"
        android:background="#fff">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:text="@string/text_forgrt"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/getview"
            android:textStyle="bold" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_passemail"
            android:textColorHint="@color/colorPrimary"
            android:textSize="25sp"
            android:background="@color/yellow"
            android:layout_marginTop="20sp"
            android:id="@+id/textemail"/>
        <Button
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:text="@string/text_btngetpass"
            android:background="@drawable/buttonshape"
            android:layout_marginTop="30sp"
            android:textColor="@color/yellow"
            android:layout_gravity="center"
            android:id="@+id/btngetpass"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_login"
            android:layout_marginTop="20sp"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@color/yellow"
            android:id="@+id/idlogin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_get"
            android:textSize="30sp"
            android:textStyle="italic"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/gotham"
            android:layout_marginTop="30sp"
            android:id="@+id/wellcome"/>
    </LinearLayout>


</LinearLayout>
</ScrollView>