<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".next">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:orientation="vertical"
        android:background="#fff">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="55sp"
            android:hint="@string/hint_password"
            android:textColorHint="@color/yellow"
            android:textSize="25sp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="20sp"
            android:id="@+id/textemail1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="55sp"
            android:hint="@string/hint_confirm_password"
            android:textColorHint="@color/yellow"
            android:textSize="25sp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="20sp"
            android:id="@+id/textemail2"/>


        <Button
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:text="@string/text_btngetpass"
            android:background="@drawable/buttonshape"
            android:layout_marginTop="30sp"
            android:textColor="#fff"
            android:layout_gravity="center"
            android:id="@+id/btngetpass1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_login"
            android:layout_marginTop="20sp"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@color/yellow"
            android:id="@+id/idlogin1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_get"
            android:textSize="30sp"
            android:textStyle="italic"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/gotham"
            android:layout_marginTop="30sp"
            android:id="@+id/wellcome1"/>
    </LinearLayout>

</LinearLayout>
</ScrollView>