<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".users">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:orientation="vertical"
        android:background="@drawable/loginbg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:id="@+id/title1"
            android:text="@string/text_wellcomea"
            android:textSize="40sp"
            android:textColor="#fff"
            android:layout_marginTop="70sp"
            android:textStyle="bold"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240sp"
        android:orientation="vertical"
        android:background="@drawable/picha">

        <Button
            android:layout_width="210sp"
            android:layout_height="wrap_content"
            android:id="@+id/uploads"
            android:text="@string/text_uploads"
            android:background="@drawable/buttonshape"
            android:textColor="#fff"/>
        <Button
            android:layout_width="210sp"
            android:layout_height="wrap_content"
            android:id="@+id/announce"
            android:layout_marginTop="20sp"
            android:text="@string/text_upload"
            android:textColor="@color/yellow"
            android:background="@drawable/buttonshape"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:orientation="vertical"
        android:background="@drawable/joinusbg">
        <Button
            android:layout_width="200sp"
            android:layout_marginTop="30sp"
            android:layout_height="wrap_content"
            android:text="@string/text_logout"
            android:layout_gravity="right"
            android:id="@+id/log"
            android:textColor="#fff"
            android:background="@drawable/buttonshape"/>
        <Button
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/text_exit"
            android:layout_gravity="right"
            android:background="@drawable/buttonshape"
            android:layout_marginTop="20sp"
            android:textColor="@color/yellow"
            android:id="@+id/page"
            />

    </LinearLayout>

</LinearLayout>
</ScrollView>