<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".choose">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_student"
            android:textSize="40sp"
            android:textColor="@color/yellow"
            android:id="@+id/stud"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="200sp"
        android:orientation="vertical"
        android:background="@drawable/picha">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20sp"
        android:orientation="vertical"
        android:background="@color/yellow">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:orientation="vertical"
        android:background="@drawable/joinusbg">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_results"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/btn2"
            android:id="@+id/results1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_updaten"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/btn2"
            android:layout_marginTop="10sp"
            android:id="@+id/announcement1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_exit"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/btn2"
            android:layout_marginTop="10sp"
            android:id="@+id/exit"/>
        <TextView
            android:layout_width="120sp"
            android:layout_height="50sp"
            android:layout_marginLeft="250sp"
            android:layout_marginTop="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:background="@drawable/buttonshape"
            android:text="@string/text_logout"
            android:textSize="25sp"
            android:textColor="@color/yellow"
            android:id="@+id/logout11"/>

    </LinearLayout>

</LinearLayout>

</ScrollView>