<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/joinusbg" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="170sp"
        android:layout_height="60sp"
        android:layout_above="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:drawablePadding="8dp"
        android:drawableRight="@drawable/star"
        android:shadowColor="#57000000"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="2"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="270dp"
        android:src="@drawable/rocket" />

    <Button
        android:id="@+id/join_us"
        android:layout_width="210dp"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="184dp"
        android:background="@drawable/buttonshape"
        android:text="@string/text_learn"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/create1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/gotham"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:shadowColor="#57000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="2"
        android:text="@string/text_create"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp" />
    <TextView
        android:id="@+id/logaccount"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/gotham"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:shadowColor="#57000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="2"
        android:text="@string/text_login"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />



</RelativeLayout>